# Uma

./: .gitattributes  .gitignore  BUILD_STATUS.md  CHANGES_FOR_IOS.md  CMakeLists.txt  DEBUG_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_PVP.md  DISTRIBUTION_QUICKSTART.md  INSTALL_IOS.md  IOS_BUILD_GUIDE.md  IOS_DISTRIBUTION_GUIDE.md  IOS_DISTRIBUTION_SUMMARY.md  IOS_IMPLEMENTATION_COMPLETE.md  IOS_INDEPENDENT_DISTRIBUTION_COMPLETE.md  IOS_QUICK_REFERENCE.md  Info.plist  MOBILE_BUILD_README.md  MOBILE_CONTROLS.md  MOBILE_DEPLOYMENT_GUIDE.md  MOBILE_IMPLEMENTATION_SUMMARY.md  MOBILE_README.md  PVP_FEATURES.md  PVP_FEATURES_SUMMARY.md  QUICKSTART_IOS.md  QUICKSTART_MOBILE.md  README.md  Racer.uproject  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  START_HERE.md  ThirdPersonRacer.uproject  build.sh  build_android.sh  build_ios.sh  build_ios_distribution.sh  build_mobile.sh  debug.sh  debug_build.sh  deploy_ios.sh  (+12 more)
.github/workflows/: ios-build.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Scripts/: build_ios.sh
Source/: Racer.Target.cs  RacerEditor.Target.cs  ThirdPersonRacer.Target.cs  ThirdPersonRacerEditor.Target.cs
Source/Racer/: Racer.Build.cs  Racer.cpp
Source/Racer/Private/: RacerCharacter.cpp  RacerDashComponent.cpp  RacerGameMode.cpp  RacerPlayerController.cpp
Source/Racer/Public/: RacerCharacter.h  RacerDashComponent.h  RacerGameMode.h  RacerPlayerController.h
Source/ThirdPersonRacer/: ThirdPersonRacer.Build.cs  ThirdPersonRacer.cpp
Source/ThirdPersonRacer/Private/: TPRAnimInstance.cpp  TPRCharacter.cpp  TPRGameMode.cpp  TPRPlayerController.cpp
Source/ThirdPersonRacer/Public/: TPRAnimInstance.h  TPRCharacter.h  TPRGameMode.h  TPRPlayerController.h
android/: AndroidManifest.xml  CMakeLists.txt  android_main.cpp  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/racinggame/mobile/: GameActivity.java  MainActivity.java
android/app/src/main/java/com/racinggame3d/: GameActivity.kt  MainActivity.kt
android/app/src/main/java/com/racinggame3d/mobile/: MainActivity.java
android/app/src/main/jni/: CMakeLists.txt
iOS/: Info.plist
ios/: AppStoreMetadata.md  CMakeLists.txt  ExportOptions.plist  ExportOptionsTestFlight.plist  GameViewController.h  GameViewController.mm  Info.plist  LaunchScreen.storyboard  README.md  RacingGame3DiOS.entitlements  build_distribution.sh  build_temp_toolchain.cmake  demo_distribution.sh  distribution.html  generate_icons.py  ios_main.mm  manifest.plist  test_distribution.py
ios/build_test/: CMakeCache.txt
ios/shaders/: Shader.metal
src/: Game.cpp  Game.h  main.cpp  main_mobile.cpp
src/Camera/: Camera.cpp  Camera.h
src/Combat/: CombatManager.cpp  CombatManager.h  CombatSystem.cpp  CombatSystem.h  Combatant.cpp  Combatant.h  Player.cpp  Player.h  PlayerAbilities.cpp  PlayerAbilities.h  PlayerStats.cpp  PlayerStats.h  Projectile.cpp  Projectile.h  Shield.cpp  Shield.h
src/Effects/: ParticleSystem.cpp  ParticleSystem.h
src/Game/: MobileGame.cpp  MobileGame.h
src/Gameplay/: CombatSystem.cpp  CombatSystem.h  Player.cpp  Player.h  Stats.cpp  Stats.h
src/Input/: InputManager.cpp  InputManager.h  MobileInputManager.cpp  MobileInputManager.h  TouchInputManager.cpp  TouchInputManager.h
src/Math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/Mobile/: MobileMain.cpp  MobileRenderer.cpp  MobileRenderer.h  TouchInputManager.cpp  TouchInputManager.h  VirtualControls.h
src/Mobile/Android/: AndroidMain.cpp
src/Mobile/iOS/: iOSMain.mm
src/Physics/: Car.cpp  Car.h  PhysicsEngine.cpp  PhysicsEngine.h
src/Platform/: AndroidPlatform.h  DesktopPlatform.cpp  DesktopPlatform.h  MobileInput.cpp  MobileInput.h  Platform.cpp  Platform.h  PlatformBase.cpp  PlatformBase.h  PlatformDetect.h  iOSPlatform.h
src/Player/: Player.cpp  Player.h  PlayerStats.cpp  PlayerStats.h  Projectile.cpp  Projectile.h  PvPMechanics.cpp  PvPMechanics.h  Shield.cpp  Shield.h
src/Rendering/: MobileRenderer.cpp  MobileRenderer.h  Renderer.cpp  Renderer.h  RendererMetal.mm
src/UI/: CombatHUD.cpp  CombatHUD.h  MobileUI.cpp  MobileUI.h
src/Utils/: Shader.cpp  Shader.h
src/World/: Track.cpp  Track.h
src/engine/: Camera.cpp  Camera.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Transform.h
src/game/: Game.cpp  Game.h  Player.cpp  Player.h
src/platform/ios/: AppDelegate.mm  ViewController.h  ViewController.mm
src/shaders/: basic.frag  basic.vert
